add content to html tags

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -2,25 +2,25 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>My Favorite Places</title>
   </head>
 
 <body>
 
-<h1><strong></strong></h1>
+<h1><strong>The Best Places</strong></h1>
 
-<h2></h2>
+<h2>A Very Short List</h2>
 
-<p></p>
+<p>I used to travel a bit.</p>
 
-<p></p>
+<p>Here are a few places that I have enjoyed visiting.</p>
 
 <ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-</ul>
+  <li>Siena, Italy</li>
+  <li>Coastal Redwoods in California</li>
+  <li>Paris, France</li>
+  <li>London, England</li>
+</ul>ß
 
 </body>
 </html>
